--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Гостиницы Седоны</title>
@@ -139,7 +139,7 @@
 
   </section>
 
-  <main class="sdn-block-found">
+  <section class="sdn-block-found">
     <header class="sdn-block-found_header">
       <h2 class="sdn-block-found_heading">Найдено гостиниц: <span>20</span></h2>
       <select class="select-control" aria-label="Сортировка">
@@ -169,20 +169,20 @@
     <ul class="sdn-hotel-list">
       <li class="sdn-hotel-card">
         <a class="sdn-hotel-link" href="#">
-          <img class="sdn-hotel-image" src="" alt="">
+          <img class="sdn-hotel-image" src="#" alt="Изображение отеля">
           <h3 class="sdn-hotel-title">Amara Resort & Spa</h3>
           <span class="sdn-hotel-type">Гостиница</span>
           <b class="price">От 4000 ₽</b>
           <ul class="sdn-hotel-card_controls">
             <li class="sdn-hotel-card_control">
-              <a href="#" class="sdn-button">
+              <span class="sdn-button">
                 <strong>Подробнее</strong>
-              </a>
+              </span>
             </li>
             <li class="sdn-hotel-card_control">
-              <a href="#" class="sdn-button">
+              <span class="sdn-button">
                 <strong>В избранное</strong>
-              </a>
+              </span>
             </li>
             <li class="sdn-hotel-card_control">
               <span class="sdn-star"></span>
@@ -191,9 +191,9 @@
               <span class="sdn-star"></span>
             </li>
             <li class="sdn-hotel-card_control">
-              <a href="#" class="sdn-button">
+              <span class="sdn-button">
                 <strong>Рейтинг: 5.0</strong>
-              </a>
+              </span>
             </li>
           </ul>
         </a>
@@ -224,7 +224,9 @@
               <strong>4</strong>
             </a>
           </li>
-          <span>...</span>
+          <li class="sdn-pagination-item">
+            <span>...</span>
+          </li>
           <li class="sdn-pagination-item">
             <a href="#" class="sdn-button">
               <strong>10</strong>
@@ -233,7 +235,7 @@
         </ul>
       </nav>
     </footer>
-  </main>
+  </section>
 
 
   <section class="sdn-block-subscribe">
